force-app/main/default/objects/Installation__c/fields/AHJ_Approval__c.field-meta.xml
<CustomField>
    <fullName>AHJ_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AHJ Approval</label>
    <type>Checkbox</type>
</CustomField>