force-app/main/default/objects/Installation__c/fields/AHJ_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>AHJ_Approved_Date__c</fullName>
    <label>AHJ Approved Date</label>
    <type>Date</type>
</CustomField>