force-app/main/default/objects/Installation__c/fields/AHJ_Approver__c.field-meta.xml
<CustomField>
    <fullName>AHJ_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AHJ Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Installations8</relationshipName>
    <type>Lookup</type>
</CustomField>