force-app/main/default/objects/Installation__c/fields/AHJ_Inspection__c.field-meta.xml
<CustomField>
    <fullName>AHJ_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AHJ Inspection</label>
    <type>Checkbox</type>
</CustomField>