force-app/main/default/objects/Installation__c/fields/Application_Counter__c.field-meta.xml
<CustomField>
    <fullName>Application_Counter__c</fullName>
    <formula>Permitting_Completed_Date__c  - Permitting_Submitted_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Permitting Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>