force-app/main/default/objects/Installation__c/fields/Appt_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Appt_End_Date__c</fullName>
    <label>Installation End Date</label>
    <type>DateTime</type>
</CustomField>