force-app/main/default/objects/Installation__c/fields/Appt_Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>Appt_Installation_Status__c</fullName>
    <label>Appt Installation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>