force-app/main/default/objects/Installation__c/fields/Appt_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Appt_Start_Date__c</fullName>
    <label>Installation Start Date</label>
    <type>DateTime</type>
</CustomField>