force-app/main/default/objects/Installation__c/fields/Automatic_Text_In_Transit__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Text_In_Transit__c</fullName>
    <formula>IF(  $Setup.Text_Settings_Appt__c.Installation_In_Transit_Home_Automati__c  = TRUE, 
&quot;Home Automation&quot;+BR(), &quot;&quot;)+
IF(  $Setup.Text_Settings_Appt__c.Installation_In_Transit_Pest_Control__c  = TRUE, &quot;Pest Control&quot;+BR(), &quot;&quot;)+
IF(  $Setup.Text_Settings_Appt__c.Installation_In_Transit_Solar__c  = TRUE,&quot;Solar&quot;+BR(), &quot;&quot;)+
IF(  $Setup.Text_Settings_Appt__c.Installation_In_Transit_Water__c  = TRUE,&quot;Water&quot;+BR(), &quot;&quot;)+
IF(  $Setup.Text_Settings_Appt__c.Installation_In_Transit_Window__c  =TRUE,&quot;Window&quot;+BR(),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automatic Text - In Transit</label>
    <type>Text</type>
</CustomField>