force-app/main/default/objects/Installation__c/fields/Battery_Install__c.field-meta.xml
<CustomField>
    <fullName>Battery_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Battery Install</label>
    <type>Checkbox</type>
</CustomField>