force-app/main/default/objects/Installation__c/fields/Call_Center_Count__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Count__c</fullName>
    <label>Confirmation Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>