force-app/main/default/objects/Installation__c/fields/COC_Counter__c.field-meta.xml
<CustomField>
    <fullName>COC_Counter__c</fullName>
    <formula>Date_Completed__c  -  Date_Sent_to_Customer_COC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COC Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>