force-app/main/default/objects/Installation__c/fields/COC_Start__c.field-meta.xml
<CustomField>
    <fullName>COC_Start__c</fullName>
    <label>COC Start</label>
    <type>Date</type>
</CustomField>