force-app/main/default/objects/Installation__c/fields/COC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>COC_Start_Date__c</fullName>
    <formula>IF( CONTAINS(TEXT( Installation_Status__c ),&quot;Certificate of Completion&quot;), COC_Start__c , COC_Start__c - 5 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COC Start Date</label>
    <type>Date</type>
</CustomField>