force-app/main/default/objects/Installation__c/fields/Commissioning__c.field-meta.xml
<CustomField>
    <fullName>Commissioning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commissioning</label>
    <type>Checkbox</type>
</CustomField>