force-app/main/default/objects/Installation__c/fields/Complete_Photos__c.field-meta.xml
<CustomField>
    <fullName>Complete_Photos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Photos</label>
    <type>Checkbox</type>
</CustomField>