force-app/main/default/objects/Installation__c/fields/Cost_of_Good_Variance__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Good_Variance__c</fullName>
    <formula>Cost_of_Goods__c -  Cost_of_Goods_HS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost of Good Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>