force-app/main/default/objects/Installation__c/fields/Cost_of_Goods_Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Goods_Change_Order__c</fullName>
    <label>Cost of Goods Change Order</label>
    <summarizedField>Change_Order__c.Cost_of_Goods__c</summarizedField>
    <summaryForeignKey>Change_Order__c.Installation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>