force-app/main/default/objects/Installation__c/fields/Cost_of_Goods_HS__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Goods_HS__c</fullName>
    <formula>Home_Service__r.Cost_of_Goods__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost of Goods - HS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>