force-app/main/default/objects/Installation__c/fields/Cost_of_Labor__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Labor__c</fullName>
    <label>Cost of Labor</label>
    <summarizedField>Install_Item__c.Invoiced_Amounts__c</summarizedField>
    <summaryForeignKey>Install_Item__c.Installation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>