force-app/main/default/objects/Installation__c/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <formula>Home_Service__r.Street__c +&apos; &apos;+ Home_Service__r.City__c +&apos; &apos;+ Home_Service__r.State__c +&apos; &apos;+ Home_Service__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Address</label>
    <type>Text</type>
</CustomField>