force-app/main/default/objects/Installation__c/fields/Date_Sent_to_Customer_COC__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_Customer_COC__c</fullName>
    <label>Date Sent to Customer</label>
    <type>Date</type>
</CustomField>