force-app/main/default/objects/Installation__c/fields/Dealer_Fees__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fees__c</fullName>
    <label>Dealer Fees</label>
    <summarizedField>Funding__c.Dealer_Fees__c</summarizedField>
    <summaryForeignKey>Funding__c.Installation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>