force-app/main/default/objects/Installation__c/fields/Dealer_Fees_Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fees_Change_Order__c</fullName>
    <label>Dealer Fees Change Order</label>
    <summarizedField>Change_Order__c.Dealer_Fees__c</summarizedField>
    <summaryForeignKey>Change_Order__c.Installation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>