force-app/main/default/objects/Installation__c/fields/Derate__c.field-meta.xml
<CustomField>
    <fullName>Derate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Derate</label>
    <type>Checkbox</type>
</CustomField>