force-app/main/default/objects/Installation__c/fields/Document_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Document_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Approved_By_Installations</relationshipName>
    <type>Lookup</type>
</CustomField>