force-app/main/default/objects/Installation__c/fields/Document_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Approved_Date__c</fullName>
    <label>Document Approved Date</label>
    <type>DateTime</type>
</CustomField>