force-app/main/default/objects/Installation__c/fields/Document_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Reviewed_Date__c</fullName>
    <label>Document Reviewed Date</label>
    <type>DateTime</type>
</CustomField>