force-app/main/default/objects/Installation__c/fields/Document_Revised_By__c.field-meta.xml
<CustomField>
    <fullName>Document_Revised_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Revised By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Revised_By_Installations</relationshipName>
    <type>Lookup</type>
</CustomField>