force-app/main/default/objects/Installation__c/fields/Document_Revised_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Revised_Date__c</fullName>
    <label>Document Revised Date</label>
    <type>DateTime</type>
</CustomField>