force-app/main/default/objects/Installation__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Documents Reviewed</fullName>
            </value>
            <value>
                <fullName>Documents Revisions</fullName>
            </value>
            <value>
                <fullName>Documents Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>