force-app/main/default/objects/Installation__c/fields/Email_Counter__c.field-meta.xml
<CustomField>
    <fullName>Email_Counter__c</fullName>
    <formula>Home_Service__r.Account__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>