force-app/main/default/objects/Installation__c/fields/Event_Not_Ran__c.field-meta.xml
<CustomField>
    <fullName>Event_Not_Ran__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Not Ran</label>
    <type>Checkbox</type>
</CustomField>