force-app/main/default/objects/Installation__c/fields/Final_Gross_Sale__c.field-meta.xml
<CustomField>
    <fullName>Final_Gross_Sale__c</fullName>
    <formula>Gross_Sale_Price__c + Gross_Sale_Change_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>