force-app/main/default/objects/Installation__c/fields/Funding_Paid__c.field-meta.xml
<CustomField>
    <fullName>Funding_Paid__c</fullName>
    <formula>Total_Paid__c -  Total_Reversed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>