force-app/main/default/objects/Installation__c/fields/Funding_Started__c.field-meta.xml
<CustomField>
    <fullName>Funding_Started__c</fullName>
    <formula>Total_Payment_Amount__c  -  Total_Reversed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Started</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>