force-app/main/default/objects/Installation__c/fields/G_A_Allocation_HS__c.field-meta.xml
<CustomField>
    <fullName>G_A_Allocation_HS__c</fullName>
    <formula>G_A_Allocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>G&amp;A Allocation - HS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>