force-app/main/default/objects/Installation__c/fields/Glass_Install__c.field-meta.xml
<CustomField>
    <fullName>Glass_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Glass Install</label>
    <type>Checkbox</type>
</CustomField>