force-app/main/default/objects/Installation__c/fields/Gross_Sale_Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Gross_Sale_Change_Order__c</fullName>
    <label>Gross Sale Price Change Order</label>
    <summarizedField>Change_Order__c.Gross_Sale__c</summarizedField>
    <summaryForeignKey>Change_Order__c.Installation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>