force-app/main/default/objects/Installation__c/fields/Gross_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Gross_Sale_Price__c</fullName>
    <formula>Home_Service__r.Total_Cash_Selling_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Sale Price - HS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>