force-app/main/default/objects/Installation__c/fields/HOA_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>HOA_Approval_Required__c</fullName>
    <label>HOA Approval Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>