force-app/main/default/objects/Installation__c/fields/I_C_Start__c.field-meta.xml
<CustomField>
    <fullName>I_C_Start__c</fullName>
    <formula>IF( CONTAINS(TEXT( Installation_Status__c ),&quot;Inspections and Commissioning&quot;),  I_C_Start_Date__c  ,  DATEVALUE(CreatedDate)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I &amp; C Start</label>
    <type>Date</type>
</CustomField>