force-app/main/default/objects/Installation__c/fields/I_C_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>I_C_Start_Date__c</fullName>
    <label>I &amp; C Start Date</label>
    <type>Date</type>
</CustomField>