force-app/main/default/objects/Installation__c/fields/I_I_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>I_I_Submitted_Date__c</fullName>
    <label>I/I Submitted Date</label>
    <type>Date</type>
</CustomField>