force-app/main/default/objects/Installation__c/fields/I_I_Submitter__c.field-meta.xml
<CustomField>
    <fullName>I_I_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>I/I Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Installations6</relationshipName>
    <type>Lookup</type>
</CustomField>