force-app/main/default/objects/Installation__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>IF(
CONTAINS( RecordType.Name , &quot;Home Automation&quot; ), &quot;Protection Source&quot;,
IF(
CONTAINS(RecordType.Name, &quot;Solar&quot; ), &quot;N-Ergy&quot;,
IF(
CONTAINS(RecordType.Name, &quot;Water&quot; ), &quot;Aqua Bright Water&quot;,
IF(
CONTAINS(RecordType.Name, &quot;Remodel&quot; ), &quot;Latch&quot;,
IF(
CONTAINS(RecordType.Name, &quot;Pest Control&quot; ), &quot;Jax Pro Pest&quot;,
RecordType.Name)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Company</label>
    <type>Text</type>
</CustomField>