force-app/main/default/objects/Installation__c/fields/Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>Installation_Status__c</fullName>
    <label>Installation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
                <default>true</default>
                <label>Sale</label>
            </value>
            <value>
                <fullName>Pre Installation</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Post Installation</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
            </value>
            <value>
                <fullName>Presubmission</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>Plans</fullName>
            </value>
            <value>
                <fullName>Permitting</fullName>
            </value>
            <value>
                <fullName>Glass Install</fullName>
            </value>
            <value>
                <fullName>Battery Install</fullName>
            </value>
            <value>
                <fullName>Certificate of Completion</fullName>
            </value>
            <value>
                <fullName>Inspections and Commissioning</fullName>
            </value>
            <value>
                <fullName>PTO</fullName>
            </value>
            <value>
                <fullName>Framing</fullName>
            </value>
            <value>
                <fullName>HVAC/Plumbing/Electrical</fullName>
            </value>
            <value>
                <fullName>Drywall/Tile</fullName>
            </value>
            <value>
                <fullName>Punch List/Final Walk Thru</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>