force-app/main/default/objects/Installation__c/fields/Installing_Company__c.field-meta.xml
<CustomField>
    <fullName>Installing_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installing Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Installation_Company__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Installations</relationshipLabel>
    <relationshipName>Installations</relationshipName>
    <type>Lookup</type>
</CustomField>