force-app/main/default/objects/Installation__c/fields/Interconnection_Incentive_to_Utility__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Incentive_to_Utility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interconnection/Incentive to Utility</label>
    <type>Checkbox</type>
</CustomField>