force-app/main/default/objects/Installation__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>You must add a valid Business Account.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>contains</operation>
            <value>Business</value>
        </filterItems>
        <filterItems>
            <field>Account.Funding_Source__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Installations (Lender)</relationshipLabel>
    <relationshipName>Installations_Lender</relationshipName>
    <type>Lookup</type>
</CustomField>