force-app/main/default/objects/Installation__c/fields/Link_Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Link_Customer_Address__c</fullName>
    <formula>HYPERLINK(&quot;http://maps.google.com/maps?f=q&amp;hl=en&amp;q= &quot;&amp;Home_Service__r.Street__c &amp;&quot; &quot;&amp; Home_Service__r.City__c &amp;&quot; &quot;&amp; 

     Home_Service__r.State__c &amp;&quot; &quot;&amp; Home_Service__r.Zip__c, Home_Service__r.Street__c +&apos; &apos;+ Home_Service__r.City__c +&apos; &apos;+
 
         Home_Service__r.State__c +&apos; &apos;+ Home_Service__r.Zip__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Customer Address</label>
    <type>Text</type>
</CustomField>