force-app/main/default/objects/Installation__c/fields/M1_Funding__c.field-meta.xml
<CustomField>
    <fullName>M1_Funding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M1 Funding</label>
    <referenceTo>Funding__c</referenceTo>
    <relationshipLabel>Installations (M1 Funding)</relationshipLabel>
    <relationshipName>Installations</relationshipName>
    <type>Lookup</type>
</CustomField>