force-app/main/default/objects/Installation__c/fields/M2_Funding__c.field-meta.xml
<CustomField>
    <fullName>M2_Funding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M2 Funding</label>
    <referenceTo>Funding__c</referenceTo>
    <relationshipLabel>Installations (M2 Funding)</relationshipLabel>
    <relationshipName>Installations2</relationshipName>
    <type>Lookup</type>
</CustomField>