force-app/main/default/objects/Installation__c/fields/M3_Funding__c.field-meta.xml
<CustomField>
    <fullName>M3_Funding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M3 Funding</label>
    <referenceTo>Funding__c</referenceTo>
    <relationshipLabel>Installations (M3 Funding)</relationshipLabel>
    <relationshipName>Installations3</relationshipName>
    <type>Lookup</type>
</CustomField>