force-app/main/default/objects/Installation__c/fields/MPU__c.field-meta.xml
<CustomField>
    <fullName>MPU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MPU</label>
    <type>Checkbox</type>
</CustomField>