force-app/main/default/objects/Installation__c/fields/Net_Profit__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit__c</fullName>
    <formula>Gross_Profit__c - Home_Service__r.Total_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>