force-app/main/default/objects/Installation__c/fields/Net_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Sales_Price__c</fullName>
    <formula>Final_Gross_Sale__c  -  Dealer_Fees__c -  Total_Sales_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>