force-app/main/default/objects/Installation__c/fields/Net_Sales_Price_HS__c.field-meta.xml
<CustomField>
    <fullName>Net_Sales_Price_HS__c</fullName>
    <formula>Home_Service__r.Net_Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Sales Price - HS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>