force-app/main/default/objects/Installation__c/fields/Net_Sales_Price_Variance__c.field-meta.xml
<CustomField>
    <fullName>Net_Sales_Price_Variance__c</fullName>
    <formula>Net_Sales_Price__c -  Net_Sales_Price_HS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Sales Price Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>